<resources>
    <string name="app_name">GidAssistant-Mobile</string>
    <string name="routes">Routes</string>
    <string name="best_routes">Best for me</string>
    <string name="account">My account</string>
    <string name="interests_fragment">Interests</string>
    <string name="next_button">Next</string>
    <string name="skip_button">Skip</string>
    <string name="welcome_title">Welcome to GidAssistant!</string>
    <string name="welcome_description">In this application you can find places by your interests, and will able to create routes to visit this places. Let\'s enjoy!</string>
    <string name="finish_button">Finish</string>
    <string name="interests_title">Choose interests</string>
    <string name="permissions_title">We need location permissions</string>
    <string name="permissions_subtitle">Tap the screen to grant permissions</string>
    <string name="permissions_provide">Provide</string>
    <string name="start_input">Start input…</string>
    <string name="location_permissions_granted">Location permissions was granted!</string>
    <string name="location_permissions_declined">Location permissions was declined!</string>
    <string name="read_storage_granted">Permissions for read storage was granted!</string>
    <string name="read_storage_declined">Permissions for read storage was declined!</string>
    <string name="write_storage_granted">Location permissions was granted!</string>
    <string name="write_storage_declined">Location permissions was declined!</string>
    <string name="interests_counter">You select</string>
    <string name="items">items</string>
    <string name="best">Best for you</string>
    <string name="profile">Profile</string>
    <string name="click_to_open_interests">Click here to open interests</string>
    <string name="create_route">Build route</string>
    <string name="select_place_for_route">"Select places for route building "</string>
    <string name="your_interests">Your interests</string>
    <string name="can_be_added">You can add this interests</string>
    <string name="save">Save changes</string>
    <string name="cancel">Cancel changes</string>
    <string name="cannot_create_route">Cannot create an route!</string>
</resources>