<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="?app_bottomNavigationSize"
    android:background="@drawable/navigation_drawable"
    android:weightSum="3"
    android:orientation="horizontal"
    android:gravity="bottom">

    <TextView
        android:id="@+id/route"
        style="@style/TextAppearance.GidAssistant.NavigationText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/routes"/>

    <TextView
        android:id="@+id/best"
        style="@style/TextAppearance.GidAssistant.NavigationText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/best"/>

    <TextView
        android:id="@+id/profile"
        style="@style/TextAppearance.GidAssistant.NavigationText"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/profile"/>
    
    <!--<TextView
        android:layout_width=""
        android:layout_height=""
-->
</LinearLayout>