<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.yuriysurzhikov.gidassistant.ui.profile.ProfileViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.loading ? View.GONE : View.VISIBLE}">

            <TextView
                android:id="@+id/page_title"
                style="@style/TextAppearance.GidAssistant.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large_padding"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/your_interests"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/user_interests"
                style="@style/Widget.GidAssistant.ChipGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/page_title" />

            <TextView
                android:id="@+id/can_add_text"
                android:layout_marginTop="@dimen/default_padding"
                style="@style/TextAppearance.GidAssistant.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/can_be_added"
                app:layout_constraintTop_toBottomOf="@id/user_interests" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/remote_interests"
                style="@style/Widget.GidAssistant.ChipGroup"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/default_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/can_add_text" />

            <Button
                android:id="@+id/save_changes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/default_padding"
                app:layout_constraintBottom_toTopOf="@id/cancel_changes"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/save"
                android:visibility="@{viewModel.containsChanges ? View.VISIBLE : View.GONE}"
                android:textSize="@dimen/title_text_size"/>

            <Button
                android:id="@+id/cancel_changes"
                android:layout_margin="@dimen/default_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="@string/cancel"
                android:visibility="@{viewModel.containsChanges ? View.VISIBLE : View.GONE}"
                android:backgroundTint="@color/gidassistant_light_gray"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerInParent="true"
            android:visibility="@{viewModel.loading ? View.VISIBLE : View.GONE}"/>
    </RelativeLayout>
</layout>